--- a/Cinema/Cinema/MovieHoursPage.xaml
+++ b/Cinema/Cinema/MovieHoursPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cinema.MovieHoursPage"
+﻿<local:Page x:Class="Cinema.MovieHoursPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -199,4 +199,4 @@
                  x:Name="HoursListBox" MouseDoubleClick="HoursListBox_MouseDoubleClick"/>
 
     </Grid>
-</Page>
+</local:Page>
