--- a/Cinema/Cinema/MovieSeatsPage.xaml
+++ b/Cinema/Cinema/MovieSeatsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cinema.MovieSeatsPage"
+﻿<local:Page x:Class="Cinema.MovieSeatsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -105,4 +105,4 @@
 
 
     </Grid>
-</Page>
+</local:Page>
