--- a/Cinema/Cinema/SummaryPage.xaml
+++ b/Cinema/Cinema/SummaryPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cinema.SummaryPage"
+﻿<local:Page x:Class="Cinema.SummaryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -202,4 +202,4 @@
                 Content="Zamów!" x:Name="OrderButton" Click="OrderButton_Click"/>
 
     </Grid>
-</Page>
+</local:Page>
