--- a/Cinema/Cinema/SearchPage.xaml
+++ b/Cinema/Cinema/SearchPage.xaml
@@ -184,7 +184,7 @@
     <Grid>
 
         <Grid.Background>
-            <ImageBrush ImageSource="res/bg.jpg" Stretch="Fill" Opacity="0.5"/>
+            <ImageBrush ImageSource="Resources/background.jpg" Stretch="Fill" Opacity="0.5"/>
         </Grid.Background>
 
         <Button Margin="-690,-737,0,0" Style="{StaticResource ButtonStyle}"
