--- a/Cinema/Cinema/SearchPage.xaml
+++ b/Cinema/Cinema/SearchPage.xaml
@@ -1,4 +1,4 @@
-﻿<local:Page x:Class="Cinema.SearchPage"
+﻿<local:SpeechPage x:Class="Cinema.SearchPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -207,4 +207,4 @@
                  x:Name="ResultsListBox" MouseDoubleClick="ResultsListBox_MouseDoubleClick"/>
 
     </Grid>
-</local:Page>
+</local:SpeechPage>
