--- a/Cinema/Cinema/TicketsLogWindow.xaml
+++ b/Cinema/Cinema/TicketsLogWindow.xaml
@@ -5,12 +5,66 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Cinema"
         mc:Ignorable="d"
-        Title="TicketsLogWindow" Height="460" Width="310"
-        ResizeMode="NoResize">
+        Title="TicketsLogWindow" Height="300" Width="300"
+        Background="Black">
+    <Window.Resources>
+        
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="Height" Value="23"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Bottom"/>
+
+            <Setter Property="Background" Value="PaleVioletRed"/>
+            <Setter Property="Foreground" Value="DarkRed"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="10" Background="{TemplateBinding Background}" BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+
+            <Setter Property="Cursor" Value="Hand"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="LightPink"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="IndianRed"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="ListBoxStyle" TargetType="ListBox">
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+
+            <Setter Property="Background" Value="PaleVioletRed"/>
+            <Setter Property="Foreground" Value="DarkRed"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontStyle" Value="Oblique"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+
+    </Window.Resources>
     <Grid Margin="0,0,2,0">
-        <Button x:Name="RefreshDataButton" Content="Odśwież" Click="RefreshDataButton_Click" 
-                HorizontalAlignment="Left" Margin="207,391,0,0" VerticalAlignment="Top" Width="75"/>
-        <ListBox x:Name="TicketsOrdersListBox" HorizontalAlignment="Left" Height="374" Margin="10,10,0,0" VerticalAlignment="Top" Width="272"/>
+        
+        <Grid.Background>
+            <ImageBrush ImageSource="Resources/background.jpg" Stretch="Fill" Opacity="0.5"/>
+        </Grid.Background>
+        
+        <Button x:Name="RefreshDataButton" Content="Odśwież" Click="RefreshDataButton_Click" Style="{StaticResource ButtonStyle}"
+                Margin="0,210,0,10"/>
+        <ListBox x:Name="TicketsOrdersListBox" Margin="10,10,10,50" Style="{StaticResource ListBoxStyle}"/>
 
     </Grid>
 </Window>
