--- a/Cinema/Cinema/DescriptionPage.xaml
+++ b/Cinema/Cinema/DescriptionPage.xaml
@@ -1,4 +1,4 @@
-﻿<local:Page x:Class="Cinema.DescriptionPage"
+﻿<local:SpeechPage x:Class="Cinema.DescriptionPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -127,4 +127,4 @@
         <Button Margin="260,480,0,0" Style="{StaticResource ButtonStyle}" 
                 Content="Zamów bilet" x:Name="OrderButton" Click="OrderButton_Click"/>
     </Grid>
-</local:Page>
+</local:SpeechPage>
