--- a/Cinema/MainPage.xaml
+++ b/Cinema/MainPage.xaml
@@ -65,10 +65,12 @@
             <ImageBrush ImageSource="Resources/background.jpg" Stretch="Fill" Opacity="0.5"/>
         </Grid.Background>
 
-        <TextBlock Margin="10,-300,10,0" FontSize="50" Style="{StaticResource TextBlockStyle}"
+        <local:SpeechControl x:Name="speechControl" Margin="0,620,650,0"/>
+
+        <TextBlock Margin="0,0,0,300" FontSize="50" Style="{StaticResource TextBlockStyle}"
                    Text="Kino... czy coś... !!!"/>
 
-        <Button Margin="0,-60,0,0" Style="{StaticResource ButtonStyle}" 
+        <Button Margin="0,0,0,60" Style="{StaticResource ButtonStyle}" 
                 Content="Zamów bilet" x:Name="OrderButton" Click="OrderButton_Click"/>
         <Button Margin="0,60,0,0" Style="{StaticResource ButtonStyle}"
                 Content="Wyszukiwarka filmów" x:Name="SearchButton" Click="SearchButton_Click"/>
