--- a/Cinema/SummaryPage.xaml
+++ b/Cinema/SummaryPage.xaml
@@ -1,4 +1,4 @@
-﻿<local:Page x:Class="Cinema.SummaryPage"
+﻿<local:SpeechPage x:Class="Cinema.SummaryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -187,7 +187,7 @@
             <ImageBrush ImageSource="Resources/background.jpg" Stretch="Fill" Opacity="0.5"/>
         </Grid.Background>
 
-        <local:SpeechControl x:Name="speechControl" Margin="0,620,650,0"/>
+        <local:SpeechControl x:Name="SpeechControl" Margin="0,620,650,0"/>
         
         <Button Margin="-690,-737,0,0" Style="{StaticResource ButtonStyle}"
                 Content="&lt;&lt;" x:Name="BackButton" Click="BackButton_Click"/>
@@ -204,4 +204,4 @@
                 Content="Zamów!" x:Name="OrderButton" Click="OrderButton_Click"/>
 
     </Grid>
-</local:Page>
+</local:SpeechPage>
